--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -370,7 +370,9 @@
   "invoice.id": "ID",
   "invoice.issued": "Issued",
   "invoice.dueOn": "Due on",
-  "invoice.itemDesc": "Item & Description",
+  "invoice.itemNo": "Item No.",
+  "invoice.itemName": "Item",
+  "invoice.itemDesc": "Description",
   "invoice.assignment": "Assignment Type",
   "invoice.quantity": "Quantity",
   "invoice.subTotal": "Subtotal",
